tests/tldk/error/error-tldk-read-return-value3.pkt
// Establish a connection.
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0

+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0

+0  < S 0:0(0) win 32792 <mss 1000,sackOK,nop,nop,nop,wscale 7>
+0 ~ +1  > S. 0:0(0) ack 1 <...>

+.1 < . 1:1(0) ack 1 win 32792
+0.1  accept(3, ..., ...) = 4

+0 < . 1:21(20) ack 1 win 14711 
//unexpected TCP option kind: 114
//set ipv4 checksum
//set tcp offset
//+0 < . 1:4294967285(4294967284) ack 1 win 26169 
//unexpected TCP option kind: 102
+0.1 read(4, ..., 103) =  20
+0 < . 21:41(20) ack 1 win 10797 
//unexpected TCP option kind: 52
//set ipv4 checksum
//set tcp offset
+0 < . 21:37(16) ack 1 win 13879 
//unexpected TCP option kind: 54
+0.1 read(4, ..., 56) =  20
+0 < . 41:61(20) ack 1 win 12344 
//unexpected TCP option kind: 49
//set ipv4 flag off
//set tcp offset
+0 < . 41:73(32) ack 1 win 30318 
+0 write(4, ..., 97) =  97
+0 < . 61:81(20) ack 1 win 26169 
//unexpected TCP option kind: 48
//set ipv4 checksum
//set tcp offset 1 // error here
+0 < . 61:1061(1000) ack 1 win 13174 
+0.5 read(4, ..., 10000) =  1020

+0 close(4) = 0
